modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
.wizard-step-navigator-and-toolbar {
  height: 40px;
  background-color: @admin-bg-light-gray;
  position: relative;

  &.no-dropdown-hover {
    .fold-button .@{_COMMON_PREFIX}dropdown {
      display: none;
    }
  }

  &.minimized {
    .fold-button {
      display: inline-flex;
    }
  }

  &.has-help-text-button {
    .fold-button, .wizard-step-navigator {
      padding-right: 46px;
    }
  }

  .toolbar {
    float: right;
    margin: 0 40px;

    button {
      background: @admin-green;
      color: white;
      line-height: 20px;
      padding: 10px 15px 10px 15px;
      margin: 0;

      &:hover {
        background-color: lighten(@admin-green, 5%);
      }
    }
  }

  .fold-button {
    display: none;
    position: relative;
    width: 100%;
    height: 100%;
    padding: 0;
    padding-left: 22px; // Same as width of the help button on the right
    border: none;
    background-color: @admin-bg-light-gray;
    vertical-align: middle;
    align-items: center;
    justify-content: center;

    &:after {
      display: none;
    }

    &.expanded:not(:disabled) {
      background-color: @admin-white;

      + .help-text-button {
        background-color: @admin-white;
      }
    }

    &:focus:not(:disabled) {
      border: none;
      box-shadow: none;
    }

    .fold-label {
      margin: 0 auto;
      .ellipsis();
    }

    .@{_COMMON_PREFIX}dropdown {
      top: 40px;
      width: 100%;
      max-width: none;
      box-sizing: border-box;
      box-shadow: 0px 5px 10px -3px rgba(0, 0, 0, 0.3);
      border-top: 1px solid lightgray;

      .wizard-step-navigator {
        width: initial;
        margin-bottom: 0;
        padding-right: 0;
        background-color: @admin-white;
        li {
          padding: 5px;
          float: initial;
          span {
            color: @admin-font-gray2;
            .transition(none);
            line-height: 1em;
            padding-left: 15px;
          }

          &.active {
            &:before, &:after {
              border-bottom: none;
            }
            span {
              color: @admin-font-gray3;
            }
          }

          &:hover {
            background: @admin-bg-light-gray;
            &:not(.active) span {
              color: darken(@admin-font-gray1, 10%);
            }
          }

          &:active {
            padding-bottom: 5px;
          }

          &:last-of-type {
            margin: 0;
          }
        }
      }
    }
  }

  &.scroll-stick {
    position: fixed;
    // to be above image input type mask and the input type itself
    z-index: @z-index-scroll-stick;
    top: 43px;
    border-top: 1px solid @admin-medium-gray-border;

    .box-shadow(-3px 3px 6px 0 @admin-toolbar-shadow);
  }

  &:not(.scroll-stick) {
    .fold-button.expanded:not(:disabled) {
      box-shadow: -2px -5px 10px -3px rgba(0, 0, 0, 0.3);
    }
  }

  .help-text-button {
    position: absolute;
    right: 0px;
    top: 9px;
    padding: 0 14px 0 10px;
    overflow: hidden;
    z-index: @z-index-mask - 2;
    cursor: pointer;

    &:after {
      display: block;
      content: "?";
      height: 22px;
      width: 22px;
      text-align: center;
      line-height: 22px;
      font-size: 16px;
      .border-radius(50%);
      color: white;
      background: @form-button-bg-hover;
    }

    &.on:after {
      background: @admin-button-blue1;
    }

    &:hover:not(.on):after {
      color: @admin-dark-gray;
    }
  }
}
._0-240, ._240-360, ._360-540, ._540-720, ._720-960 {
  .wizard-step-navigator-and-toolbar {
    padding-left: 0;
  }
}

